--- a/plugin/build.xml
+++ b/plugin/build.xml
@@ -1,7 +1,7 @@
 <project default="devbuild">
 
 	<!-- Simply set the name of the plugin here, e.g. "fileUpload" or "file_upload") instead of "sample" -->
-	<property name="name" value="sample" />
+	<property name="name" value="usercreation" />
 
 	<!-- Use this task to let ant copy the compiled jar files to the target folders for development  -->
 	<target name="devbuild">
@@ -9,43 +9,6 @@
 			<arg value="package"/>
 		</exec>
 		<copy file="module-main/target/plugin_intranda_rest_${name}.jar" todir="/opt/digiverso/goobi/plugins/GUI/" overwrite="true"/>
-	</target>
-
-	<!-- Use this task to let configuration, plugin, user interface files and maven artifact be renamed to your plugin name -->
-	<target name="rename">
-		<replace file="pom.xml" token="&lt;artifactId&gt;sample" value="&lt;artifactId&gt;${name}" />
-
-		<replace file="module-main/pom.xml" token="goobi-plugin-rest-sample" value="goobi-plugin-rest-${name}" />
-		<replace file="module-main/pom.xml" token="&lt;artifactId&gt;sample" value="&lt;artifactId&gt;${name}" />
-		<replace file="module-main/pom.xml" token="&lt;jar.name&gt;plugin_intranda_rest_sample" value="&lt;jar.name&gt;plugin_intranda_rest_${name}" />
-
-		<script language="javascript">
-		    var words = project.getProperty("name").split("_");
-			var name = "";
-			for (i = 0; i &lt; words.length; i++) {
-				name += words[i].replace( /^.|\s\S/g, function(a) { return a.toUpperCase(); });
-            }
-			project.setProperty("capitalize", name);
-		</script>
-		
-		<move file="src/main/java/io/goobi/api/rest/SampleRestPlugin.java" tofile="src/main/java/io/goobi/api/rest/${capitalize}RestPlugin.java" failonerror="false"/>
-		<replace file="src/main/java/io/goobi/api/rest/${capitalize}RestPlugin.java" token="SampleRestPlugin" value="${capitalize}RestPlugin" />
-		<replace file="src/main/java/io/goobi/api/rest/${capitalize}RestPlugin.java" token="intranda_rest_sample" value="intranda_rest_${name}" />
-		<replace file="src/main/java/io/goobi/api/rest/${capitalize}RestPlugin.java" token="plugin_rest_sample" value="plugin_rest_${name}" />
-		<replace file="src/main/java/io/goobi/api/rest/${capitalize}RestPlugin.java" token="Sample rest plugin" value="${capitalize} rest plugin" />
-
-		<move file="src/test/java/io/goobi/api/rest/SamplePluginTest.java" tofile="src/test/java/io/goobi/api/rest/${capitalize}PluginTest.java" failonerror="false"/>
-		<replace file="src/test/java/io/goobi/api/rest/${capitalize}PluginTest.java" token="SamplePluginTest" value="${capitalize}PluginTest" />
-		
-		<replace file="../README.md" token="plugin-rest-sample" value="plugin-rest-${name}" />
-		<replace file="../README.md" token="intranda_rest_sample" value="intranda_rest_${name}" />
-		<replaceregexp file="../README.md" match="This is the(.*?)interface." flags="gs"
-			replace="This is the ${capitalize} Goobi REST plugin. A description for this plugin is still missing." />
-		<replaceregexp file="../README.md" match="## KICKSTART(.*?)## Plugin details" flags="gs" replace="## Plugin details" />
-
-		<replace file=".project" token="A-goobi-plugin-rest-sample" value="goobi-plugin-rest-${name}" />
-		<replaceregexp file="build.xml" match="\t&lt;!-- Use this task to let configuration(.*?)&lt;/project&gt;" flags="gs" replace="&lt;/project&gt;" />
-
 	</target>
 
 </project>
