--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.intranda.goobi.plugins.rest</groupId>
-  <artifactId>sample</artifactId>
+  <artifactId>usercreation</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
   <properties>
-    <goobi.version>22.03.1</goobi.version>
+    <goobi.version>LOGIN</goobi.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <distributionManagement>
@@ -21,7 +21,7 @@
     </repository>
   </repositories>
   <modules>
-    <module>module-main</module>
+    <module>module-main</module>    
   </modules>
   <dependencies>
     <dependency>
