--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
+
+# Junk files
+*~
 .DS_Store
-node_modules
+
+# Build
+target/
+bin/
+build/
+node_modules/
+
+# Eclipse
+.project
+.classpath
+.settings/
+
+# IntelliJ IDEA
+.idea
+*.iml
+
+
 TD.md
 td.md
-
 # Ignore vim swap files
 [._]*.s[a-v][a-z]
 !*.svg  # comment out if you don't need vector files
@@ -10,14 +28,11 @@ td.md
 [._]s[a-rt-v][a-z]
 [._]ss[a-gi-z]
 [._]sw[a-p]
-
 # Session
 Session.vim
 Sessionx.vim
-
 # Temporary
 .netrwhist
-*~
 # Auto-generated tag files
 tags
 # Persistent undo
