--- a/module-lib/pom.xml
+++ b/module-lib/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-rest-user-creation</artifactId>
-    <version>24.06-SNAPSHOT</version>
+    <version>24.10</version>
   </parent>
   <artifactId>plugin-rest-user-creation-lib</artifactId>
   <packaging>jar</packaging>
