--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
   <parent>
     <groupId>io.goobi.workflow</groupId>
     <artifactId>workflow-base</artifactId>
-    <version>24.11-SNAPSHOT</version>
+    <version>24.11</version>
     <relativePath />
   </parent>
-  <version>24.11-SNAPSHOT</version>
+  <version>24.11</version>
   <groupId>io.goobi.workflow.plugin</groupId>
   <artifactId>plugin-rest-user-creation</artifactId>
   <packaging>pom</packaging>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>io.goobi.workflow</groupId>
       <artifactId>workflow-core</artifactId>
-      <version>24.11-SNAPSHOT</version>
+      <version>24.11</version>
       <classifier>classes</classifier>
     </dependency>
   </dependencies>
