--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow</groupId>
     <artifactId>workflow-base</artifactId>
-    <version>tomcat10-SNAPSHOT</version>
+    <version>25.02-SNAPSHOT</version>
     <relativePath />
   </parent>
   <groupId>io.goobi.workflow.plugin</groupId>
@@ -25,7 +25,7 @@
     <dependency>
       <groupId>io.goobi.workflow</groupId>
       <artifactId>workflow-core</artifactId>
-      <version>tomcat10-SNAPSHOT</version>
+      <version>25.02-SNAPSHOT</version>
       <classifier>classes</classifier>
     </dependency>
   </dependencies>
