--- a/module-job/pom.xml
+++ b/module-job/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-rest-user-creation</artifactId>
-    <version>25.04</version>
+    <version>25.05-SNAPSHOT</version>
   </parent>
   <artifactId>plugin-rest-user-creation-job</artifactId>
   <packaging>jar</packaging>
