--- a/module-lib/pom.xml
+++ b/module-lib/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-rest-user-creation</artifactId>
-    <version>25.11-SNAPSHOT</version>
+    <version>25.11</version>
   </parent>
   <artifactId>plugin-rest-user-creation-lib</artifactId>
   <packaging>jar</packaging>
