--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.goobi.workflow</groupId>
     <artifactId>workflow-base</artifactId>
-    <version>25.11-SNAPSHOT</version>
+    <version>25.11</version>
     <relativePath/>
   </parent>
   <groupId>io.goobi.workflow.plugin</groupId>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>io.goobi.workflow</groupId>
       <artifactId>workflow-core</artifactId>
-      <version>25.11-SNAPSHOT</version>
+      <version>25.11</version>
       <classifier>classes</classifier>
     </dependency>
   </dependencies>
